log

Wed, 09 Mar 2022 18:37:29: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7305894
Sun, 13 Mar 2022 13:44:00: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function 'suma':
exercises.c:16:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   16 |    return *c;
      |           ^~
exercises.c:14:6: note: declared here
   14 | void suma(int a, int b, int * c) {
      |      ^~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7c72ab8
